Need to create a book card representation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
     </div>
 
     <!-- 1/6 R/C -->
-    <div class="shelf"></div>
+    <div class="shelf">
+        <div class="book-card">
+            <div class="book-content">
+
+            </div>
+        </div>
+    </div>
     <!-- If filled, add another -->
     <footer></footer>
 </body>
